--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Glowing - Reveal The Beauty of Skin</title>
+  <title>Calmdew - Reveal The Beauty of Skin</title>
 
   <!-- 
     - favicon
@@ -44,7 +44,7 @@
 
     <div class="alert">
       <div class="container">
-        <p class="alert-text">Free Shipping On All U.S. Orders $50+</p>
+        <p class="alert-text">Free Shipping On All U.S. Orders ₹2000</p>
       </div>
     </div>
 
@@ -82,7 +82,7 @@
           </button>
 
           <button class="header-action-btn" aria-label="cart item">
-            <data class="btn-text" value="0">$0.00</data>
+            <data class="btn-text" value="0">₹0.00</data>
 
             <ion-icon name="bag-handle-outline" aria-hidden="true" aria-hidden="true"></ion-icon>
 
@@ -202,7 +202,7 @@
                     Made using clean, non-toxic ingredients, our products are designed for everyone.
                   </p>
 
-                  <p class="price">Starting at $7.99</p>
+                  <p class="price">Starting at ₹2000 </p>
 
                   <a href="#" class="btn btn-primary">Shop Now</a>
 
@@ -225,7 +225,7 @@
                     Made using clean, non-toxic ingredients, our products are designed for everyone.
                   </p>
 
-                  <p class="price">Starting at $7.99</p>
+                  <p class="price">Starting at ₹2000 </p>
 
                   <a href="#" class="btn btn-primary">Shop Now</a>
 
@@ -248,7 +248,7 @@
                     Made using clean, non-toxic ingredients, our products are designed for everyone.
                   </p>
 
-                  <p class="price">Starting at $7.99</p>
+                  <p class="price">Starting at ₹2000</p>
 
                   <a href="#" class="btn btn-primary">Shop Now</a>
 
@@ -280,7 +280,7 @@
 
                 <h2 class="h2 card-title">Summer Collection</h2>
 
-                <p class="card-text">Starting at $17.99</p>
+                <p class="card-text">Starting at ₹5000</p>
 
                 <a href="#" class="btn-link">
                   <span class="span">Shop Now</span>
@@ -316,7 +316,7 @@
 
                 <h2 class="h2 card-title">Buy 1 Get 1</h2>
 
-                <p class="card-text">Starting at $7.99</p>
+                <p class="card-text">Starting at ₹2000</p>
 
                 <a href="#" class="btn-link">
                   <span class="span">Discover Now</span>
@@ -386,9 +386,9 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <del class="del">$39.00</del>
+                    <del class="del">₹8000</del>
 
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -441,7 +441,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -494,7 +494,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -547,7 +547,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -602,9 +602,9 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <del class="del">$39.00</del>
+                    <del class="del">₹8000</del>
 
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -657,7 +657,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -692,7 +692,7 @@
         <div class="container">
 
           <div class="title-wrapper">
-            <h2 class="h2 section-title">Under $25</h2>
+            <h2 class="h2 section-title">Under ₹3000</h2>
 
             <a href="#" class="btn-link">
               <span class="span">Shop All Products</span>
@@ -732,9 +732,9 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <del class="del">$39.00</del>
+                    <del class="del">₹8000</del>
 
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -787,7 +787,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -840,7 +840,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -893,7 +893,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -948,9 +948,9 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <del class="del">$39.00</del>
+                    <del class="del">₹8000</del>
 
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -1003,7 +1003,7 @@
                 <div class="card-content">
 
                   <div class="price">
-                    <span class="span">$29.00</span>
+                    <span class="span">₹6000</span>
                   </div>
 
                   <h3>
@@ -1093,7 +1093,7 @@
       <section class="section feature" aria-label="feature" data-section>
         <div class="container">
 
-          <h2 class="h2-large section-title">Why Shop with Glowing?</h2>
+          <h2 class="h2-large section-title">Why Shop with Calmdew?</h2>
 
           <ul class="flex-list">
 
@@ -1192,7 +1192,7 @@
 
             </div>
 
-            <a href="#" class="btn btn-primary">Get Only $39.00</a>
+            <a href="#" class="btn btn-primary">Get Only ₹8000</a>
 
           </div>
 
@@ -1311,11 +1311,11 @@
           </li>
 
           <li>
-            <p class="footer-list-text bold">+391 (0)35 2568 4593</p>
+            <p class="footer-list-text bold">+91 92288 *****</p>
           </li>
 
           <li>
-            <p class="footer-list-text">hello@domain.com</p>
+            <p class="footer-list-text">hello@calmdew.com</p>
           </li>
 
         </ul>
@@ -1350,24 +1350,13 @@
             <p class="footer-list-title">Infomation</p>
           </li>
 
-          <li>
-            <a href="#" class="footer-link">Start a Return</a>
-          </li>
-
+        
           <li>
             <a href="#" class="footer-link">Contact Us</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Shipping FAQ</a>
-          </li>
-
-          <li>
             <a href="#" class="footer-link">Terms & Conditions</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Privacy Policy</a>
           </li>
 
         </ul>
@@ -1395,7 +1384,7 @@
 
         <div class="wrapper">
           <p class="copyright">
-            &copy; 2022 codewithsadee
+            &copy; 2024 hardikcodes
           </p>
 
           <ul class="social-list">
